--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -24,7 +24,12 @@ body
     font-weight: normal;
     font-size: 0.8em;
 }
-
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
 #container
 {
     width: 70%;
